# gecodechoquet

./: FindGecode.cmake  README_CMAKE  gecodechoquetmacro.cmake  prj.cmake
gecodechoquet/: CMakeLists.txt  floatoptimizespace.h  floatoptimizespace.hpp  gecodechoquetdoc.h  gecodechoquetmacro.cmake  prj.cmake  rchoquetpropagator.cpp  rchoquetpropagator.h  roptimizechoquet.cpp  roptimizechoquet.h  rtestchoquet.cpp  rtestchoquet.h
gecodechoquet/gecodechoquet/: Doxyfile  gecodechoquetdoc.h  rchoquetpropagator.cpp  rtestchoquet.h
src/: CMakeLists.txt  testchoquet.cpp  testclustering.cpp  testclustering.h  testretrieval.cpp  testretrieval.h
testchoquet/src/: cmake_install.cmake  testretrieval.h
